--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,15 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Title of the document</title>
-<!-- Latest compiled and minified CSS (Bootstrap) -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
 </head>
 
 <body>
     <div class="container">
         <div class="navigation">
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-default navbar-fixed-top">
                 <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
@@ -21,7 +18,26 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Brand</a>
+                        
+                        <a class="navbar-brand" href="#">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-md-2 icon">
+                                        <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>    
+                                    </div>
+                                    <div class="col-md-10 logo">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <strong>Success Works</strong><br />
+                                            </div>
+                                             <div class="col-md-12">
+                                                <span class="text-muted center-block">Education Consulting</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
@@ -34,8 +50,7 @@
             </div><!-- /.container-fluid -->
         </nav>
         <div class="heading">
-            <h1>Success Works</h1>
-            <h2>Educational Consulting</h2>
+            
             <h3>Investing in tomorrow, Today</h3>
     
             <p>The sole mission of <strong>Success Works Educational Consulting</strong> is to assist school districts and school sites with <strong>improving student performance</strong> to <strong>eliminate the achievement gap.</strong><p>
@@ -80,8 +95,6 @@
                         </div>
                 </div>
         </div>
-<!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </div><!--container-->
 </body>
 </html>
