styled the home page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,10 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Title of the document</title>
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="navigation">
             <nav class="navbar navbar-default navbar-fixed-top">
                 <div class="container-fluid">
@@ -49,46 +50,57 @@
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
-        <div class="heading">
-            
-            <h3>Investing in tomorrow, Today</h3>
+        <hr>
+        <div class="container-fluid heading">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h3>Investing in Tomorrow Today</h3>
     
-            <p>The sole mission of <strong>Success Works Educational Consulting</strong> is to assist school districts and school sites with <strong>improving student performance</strong> to <strong>eliminate the achievement gap.</strong><p>
+                    <p class="lead">The sole mission of <strong>Success Works Educational Consulting</strong> is to assist school districts and school sites with <strong>improving student performance</strong> to <strong>eliminate the achievement gap.</strong><p>
+                     <button type="button" class="btn btn-primary btn-lg" id="contact-button">Contact Us</button>
+                </div>
+            </div>
         </div><!--heading-->
         <div class="section">
-                <h5>What We Do</h5>
-                <p>Since 2008 Success Works provides a Systematic Approach to Teaching and Learning that uses Data-Driven Instructional Design in a unique manner that ensures that all teaching results in student learning.</p>
-                <h5>We provide</h5>
-                <ul>
-                    <li><strong>schools</strong> with practical tools and solutions used to meet Common Core Standards and prepare students for college and career readiness. 
-                    </li>
-                    <li><strong>teachers</strong> with a Standards-based Teaching Design that meets the learning needs of ALL students, </li>
-                    <li><strong>students</strong> with a Standards-based Learning Approach that produces a high degree of efficacy (can do attitudes), strategies used to increase critical and analytical thinking and skill development needed for sustained improvement and increased achievement</li>
-                </ul>
-                <p>Total School Improvement solutions that can be sustained by school districts and local school-sites.</p>
+                <div class="text-center"> 
+                    <h5>What We Do</h5>
+                    <h6>Total School Improvement</h6>
+                </div>
+                <div class="container">
+                    <div class="row text-center">
+                        <div class="col-md-12">
+                            <p class="section-lead">Since 2008 Success Works provides a Systematic Approach to Teaching and Learning that uses Data-Driven Instructional Design in a unique manner that ensures that all teaching results in student learning. Total School Improvement solutions that can be sustained by school districts and local school-sites.</p>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col-md-4">
+                        <span class="glyphicon glyphicon-home" aria-hidden="true"></span>                               
+                                <strong>Schools</strong> Get practical tools and solutions used to meet Common Core Standards and prepare students for college and career readiness. 
+                        </div>
+                        <div class="col-md-4">
+                        <span class="glyphicon glyphicon-apple" aria-hidden="true"></span>                               
+                            <strong>Teachers</strong> Get a Standards-based Teaching Design that meets the learning needs of ALL students. 
+                        </div>
+                        <div class="col-md-4">
+                        <span class="glyphicon glyphicon-check" aria-hidden="true"></span>                               
+                                <strong>Students</strong>Get a Standards-based Learning Approach that produces a high degree of efficacy (can do attitudes), strategies used to increase critical and analytical thinking and skill development needed for sustained improvement and increased achievement.
+                        </div>
+                    </div>
         </div>
-        <div class="section">
-                <h5>Contact Us Today</h5>
-                <p>We look forward to working in partnership with you.</p>
-                <p>
-                sweducationconsult@yahoo.com<br /> 
-                        (225)361-5647<br />
-                        (770)403-5516
-                </p>
-        </div>
+</div>
         <div class="footer">
                 <div class="row">
                         <div class="col-md-6">
                             <strong>Success Works Educational Consultant</strong>
                             <p> 705 Powers Ferry Rd #202<br />
-                                Marietta,GA , GA
+                                Marietta, GA
                             </p>
                             <p> ph: (225)361-5647<br />
                             alt: (770)403-5516<br />
                             sweducationconsult@yahoo.com<br />
                             Follow us:TwitterFacebook</p>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 text-right">
                                 <p>
                                 Copyright Success Works Educational Consulting.LLC<br />  All rights reserved
                                 </p>
