Got the mailer to work. Link navigation. Google map. Testimonial Section.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -32,7 +32,7 @@
                                                 <strong>Success Works</strong><br />
                                             </div>
                                              <div class="col-md-12">
-                                                <span class="text-muted center-block">Education Consulting</span>
+                                                <span class="text-muted center-block">Educational Consulting</span>
                                             </div>
                                         </div>
                                     </div>
@@ -41,7 +41,7 @@
                         </a>
                     </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-right" id="navigation-links">
                         <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">About Us</a></li>
@@ -86,8 +86,163 @@
                                 <strong>Students</strong>Get a Standards-based Learning Approach that produces a high degree of efficacy (can do attitudes), strategies used to increase critical and analytical thinking and skill development needed for sustained improvement and increased achievement.
                         </div>
                     </div>
-        </div>
+            </div>
+            </div>
+            <div class="section" id="services">
+                 <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5>Services</h5>
+                            <p class="section-lead">
+                                We provide administrators, support staff, teachers, students and parents with an aligned Systematic Approach to Teaching and Learning that works to meet the needs of all students. 
+                            </p>
+                        <div class="row service-container">
+	                        <div class="service col-md-4">    
+	                            <h6>Professional Development</h6>
+	                            <p>Success Works' Professional Development focuses on teaching, processing, and learning rather than simply "Training" teachers.  This helps to ensure that follow-up, implementation and transfer takes place and newly formed habits are sustained by teachers and students. 
+	        
+									We utilize "Best Practice" -High Impact Strategies that have been proven to produce the greatest school improvement.
+	
+									structured to specific needs of districts and/or local school-sites.</p>
+	                        </div>
+	                        <div class="service col-md-4">
+	                            <h6>School Academic and Organizational Reviews</h6>
+	                            <p>Success Works Educational Consultants are available to conduct Organizational Reviews used to assist school districts and/or local school sites in identifying "root causes" of problems that interfere with experiencing Total District and/or School Success. </p>
+	                        </div>
+	                        <div class="service col-md-4">
+	
+	                            <h6>Seminars</h6>
+	                            <p>MOTIVATIONAL SEMINARS
+	
+	 can be tailored to respond to specific need of client
+	
+	LEADERSHIP DEVELOPMENT SEMINARS
+	
+	are not only motivational but provide clients with foundational principles that lead to increased organizational success.
+	
+	 DATA DESIGN SEMINARS
+	
+	are not generic, but are designed to fit the specific need(s) of each client.  To ensure that the Data Design provides a unique solution, consultation in the form of an Organizational Data Needs Review is conducted as the "first step"with each perspective client. </p>
+	                        </div>
+	                   </div><!--row-->
+	                   <div class="row service-container">
+	                        <div class="service col-md-4">
+	                            <h6>Feasibility Studies For "New" Perspective School Openings</h6>
+	                            <p>Success Works consultants are available to conduct a Feasibility Study to assist clients who desire to incorporate new schools.  The Feasibility Study is used to determine the level of need for a new school within the community, the anticipated degree of community support and enrollment projections, and predicted longevity of success.</p>
+	                        </div>
+	                        <div class="service col-md-4">
+	                            <h6>Charter School Openings</h6>
+	                            <p>Success Works provides consultative assistance to facilitate the charter school application process.</p>
+	                        </div>
+	                        <div class="service col-md-4">
+	                            <h6>"Hardest to Reach"</h6>
+	                            <p>Success Works consultants will demonstrate strategies that help "Hardest to Reach" students move to deeper understanding, confidence, and clarity. We will also provide tools to increase students active participation in higher order thinking and achievement.</p>
+	                        </div>
+	                     </div><!--row-->
+	                     <div class="row testimonials">
+                            <h6>Testimonials</h6>
+                            <div class="row">
+	                            <div class="col-md-2">
+	                            	<%= image_tag("St-helena_logo.png") %>
+	                            </div>
+	                            <div class="col-md-10">
+		                            <p>McDonogh #28 Middle School of New Orleans, LA was able to make significant improvements because of the work of Mr. McCrary.  
+		                            	With a 100% at-risk student population, under Mr. McCrary's guidance, students' standardized test scores improved drastically.  
+		                            	We were able to implement a successful, full inclusion program that included students from all ability levels.  
+		                            	Mr. McCrary guided the development and implementation of a systematic plan to improve instruction which included empowering and equipping teachers with the knowledge to analyze and interpret data to focus instruction.  
+		                            	He was able to equip all members of the school community - teachers, administrators, parents, and students - with the tools necessary to succeed.  
+		                            	As a result of Mr. McCrary's mentor ship, many staff members and students developed leadership skill and are now excelling in their perspective fields.
+									</p>
+		                            <p class="testimonal-author">- <strong>Linda Saucier</strong> Principal of St Helena Central Elementary School</p>
+		                        </div>
+	                        </div>
+	                        <div class="row">
+		                        <div class="col-md-2">
+		                        	<%= image_tag("muskogee-logo.png") %>
+	                            </div>
+		                        <div class="col-md-10">
+		                            <p>John McCrary has the ability to connect with his audience through engaging presentations that provide insightful connections to student learning and assessment.
+		                            	He is well-rounded in his experience and knowledge, from administrative leadership to understanding literacy instruction and teaching methodology, to direct instruction with student groups.
+									</p>
+									<p class="testimonal-author">- <strong>Melony Carey</strong> Director of Professional Development and Public Relations, Muskogee Independent School District No. 20</p>
+	 							</div>  
+ 							</div>                      
+                         </div><!--row-->
+                         </div>
+                    </div>
+                </div>
+            </div>
 </div>
+        <div class="section" id="about">
+                 <div class="container">
+                    <div class="row text-center">
+                        <div class="col-md-12">
+                            <h5>About Us</h5>
+                            <p class="section-lead">
+                                
+                            </p>
+                             <h6>Our Mission</h6>
+                            <p>To eliminate the achievement gap by empowering school districts, local school-sites, classroom teachers and students and equipping each with practical "Best Practiced" strategies and tools used to
+
+-Create sustained school-wide improvement
+
+-Meet Standards-Common Core and College and Career ready 
+
+-Increase student achievement for ALL subgroups.</p>
+                            <h6>Our Business</h6>
+                            <p>Founded in 2008, Success Works prides itself on giving our clients the personal attention that they deserve.
+
+Our services are refreshingly unique.  Our aim is to empower, embolden, and equip you, our client and partner.
+
+Success Works is driven to eliminate the achievement gap and provide exemplary education for ALL students. 
+
+We truly understand that NOW is the time to eliminate the achievement gap and produce schools where ALL students meet and exceed standards and are college and career ready.  
+
+We provide our clients access to School Improvement Tools that EMPOWER and  EQUIP administrators, teachers, and students to manage the change process and produce results in the form of student improvement in one year.</p>
+                            <h6>John McCrary, Lead Consultant</h6>
+                            <p>With over 30 years of experience, John McCrary is passionately committed to helping ensure that all students attain the necessary 21st century literacy skills and are globally ready. He has a background in school turnaround, instructional design, professional development, and accountability.
+
+John is recognized as an outstanding instructional leader and motivational speaker. He is the recipient of numerous awards and commendations and has presented at a variety of educational workshops and national educational conferences.</p>
+                        </div>
+                    </div>
+                 </div>
+         </div><!-- section about us-->
+          <div class="section" id="contact">
+                 <div class="container">
+                    <div class="row text-center">
+                        <div class="col-md-12">
+                            <h5>Contact Us</h5>
+                            <p class="section-lead">
+                            Together, we can make a difference NOW to improve the educational quality for ALL students.  We are excited about the possibility of partnering with your school district or school-site. 
+                            </p>
+                            <div class="col-md-6">
+	                            <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:400px;width:520px;'><div id='gmap_canvas' style='height:400px;width:520px;'>
+	                                </div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div> 
+	                                <a href='https://add-map.com/'>embed google maps</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=c69c2c0e90cdc9c6fe6af1ef5f5dffb20262d1a0'>
+	                            </script>
+	                            <script type='text/javascript'>function init_map(){var myOptions = {zoom:12,center:new google.maps.LatLng(33.9363979,-84.48189430000002),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(33.9363979,-84.48189430000002)});infowindow = new google.maps.InfoWindow({content:'<strong>Success Works Educational Consulting</strong><br>705 Powers Ferry Rd #202 <br>Marietta, GA 30067<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+                        	</div>
+                        	<div class="col-md-6">
+                        		<p class="notice"><%= notice %></p>
+       							<p class="alert"><%= alert %></p>
+								<%=simple_form_for @contact, :html=>{:class=>'form-horizontal'} do |form| %>
+									<%= form.input :name, :required=> true %>
+									<%= form.input :email, :required=> true %>
+									<%= form.input :message, :as => :text, :required => true %>
+									<div class="hidden">
+										<%= form.input :nickname, :hint=>'Leave this field blank'%>
+									</div>
+									<div>
+										<br />
+										<%= form.button :submit, 'Send Message', :class=>"btn btn-primary" %>
+									</div>
+								<% end %>
+							</div>
+							</div>
+                        </div>
+                    </div>
+                 </div>
+         </div><!-- section about us-->
         <div class="footer">
                 <div class="row">
                         <div class="col-md-6">
