--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,6 +70,7 @@ body{
         border-radius: 0px;
         position: relative;
         bottom: -50px;
+        border: solid 3px white;
     } 
     h3{
         font-weight: 700;
@@ -92,18 +93,21 @@ body{
         font-size:30px;
         letter-spacing: 5px;
         font-weight: 700;
+        text-align:center;
         color: #F5821C;
     }
     h6{
         font-size:20px;
         letter-spacing: 5px;
         font-weight: 700;
+        text-align:center;
         color: #284E77;
         
     }
    .section-lead{
         font-size:20px;
         color:#6A7B8D;
+        text-align:center;
    } 
    .col-md-4{
         color:#6A7B8D;
@@ -124,6 +128,58 @@ body{
                 color: #fff;
         }
    }
+   .service-container{
+       display:flex;
+       .service{
+            color: #fff;
+            background-color:#284E77;
+            border:solid 3px white;
+            h6{
+                    color:#fff;
+                    text-align:center;
+            }
+       }
+   }
+   .testimonials{
+      color:#6A7B8D;
+      .testimonal-author{
+          strong{
+            color:#284E77;
+          }
+      }
+   }
+}
+.hidden{
+  display:none;
+}
+/*flash*/
+
+.alert-error {
+background-color: #f2dede;
+border-color: #eed3d7;
+color: #b94a48;
+text-align: left;
+}
+
+.alert-alert {
+background-color: #f2dede;
+border-color: #eed3d7;
+color: #b94a48;
+text-align: left;
+}
+
+.alert-success {
+background-color: #dff0d8;
+border-color: #d6e9c6;
+color: #468847;
+text-align: left;
+}
+
+.alert-notice {
+background-color: #dff0d8;
+border-color: #d6e9c6;
+color: #468847;
+text-align: left;
 }
 .footer{
     background-color:#284E77;
